[package]
name = "tracing-layer-dispatch"
version = "0.1.0"
authors = ["Jacek Chmiel <jacek@chmiel.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.13"
tracing-subscriber = "0.2.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false